removed all folders

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 recursive-include SPARQLToSQL/static/css *.css
 recursive-include SPARQLToSQL/static/js *.js
 recursive-include SPARQLToSQL/static/img *.gif
-recursive-include SPARQLToSQL/sql *.sql
-recursive-include SPARQLToSQL/rdf *.rdf
+recursive-include SPARQLToSQL *.sql
+recursive-include SPARQLToSQL *.rdf
 recursive-include SPARQLToSQL/templates *.html
+recursive-include SPARQLToSQL *.db
